# neurostream

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
configs/: finetune.yaml  linear_probe.yaml  pretrain.yaml  pretrain_corpus.yaml  train.yaml
configs/data/: corpus.yaml
configs/model/: mae_base.yaml
configs/probe/: default.yaml
configs/train/: finetune.yaml  pretrain.yaml
docs/: sharded_ingestion.md
docs/adr/: 0001-use-eegnet-as-baseline.md  0002-mae-over-contrastive.md  0003-open-corpus-over-tuh.md  0004-bci-iv-2a-preprocessing-harmonisation.md
docs/agents/: 00_INDEX.md  01_PROJECT_OVERVIEW.md  02_PHASE_2_PLAN.md  03_ARCHITECTURE_AND_DECISIONS.md  04_DATA_PIPELINE.md  05_ENVIRONMENT_AND_SETUP.md  06_PHASE_3_PLUS_PLAN.md
docs/phase-1-notes/: 01-window-fix.md  02-eog-channels.md  03-session-e-labels.md  04-paper-faithful-reproduction.md  05-resampling-protocol.md  06-mps-numerical-issues.md  07-mlflow-portability.md  README.md
docs/phase-2-notes/: finetune-results.md  phase-2-status.md  probe-data-mismatch.md  sharded_ingestion.md
notebooks/: 01_data_sanity.ipynb  02_open_corpus_sanity.ipynb  README.md
scripts/: build_corpus_index.py  finetune.py  ingest_open_corpus.py  linear_probe.py  pretrain.sh  probe_ablation.py  probe_sweep.sh
tests/: conftest.py  test_channel_selection.py  test_checkpoint.py  test_corpus_pipeline.py  test_data_split.py  test_filters.py  test_missing_channels.py  test_normalizer.py  test_overfit_gate.py  test_pipeline.py  test_resampling.py  test_smoke.py  test_source_scale.py
tests/data/: __init__.py  test_bci_iv_harmonised.py  test_bci_iv_loader.py  test_corpus_index.py  test_window_dataset.py  test_window_extract.py
tests/eval/: __init__.py  test_reports.py
tests/models/: __init__.py  test_mae_classifier.py  test_mae_gradients.py  test_mae_loss.py  test_mae_masking.py  test_mae_shapes.py
tests/preprocessing/: __init__.py  test_bci_pipeline.py  test_corpus_pipeline.py  test_missing_channels.py  test_referencing.py  (+1 more)
(+53 files in other folders)
