[project]
name = "neurostream"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
    "flatdict>=4.1.0",
    "hydra-core>=1.3.2",
    "mlflow>=3.11.1",
    "mne>=1.12.0",
    "numpy>=2.4.4",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "torch>=2.11.0",
]

[tool.mypy]
files = ["src", "tests"]
ignore_missing_imports = true

[tool.pytest.ini_options]
markers = [
    "slow: tests that take more than a few seconds (run with `pytest -m slow`)",
]

[dependency-groups]
dev = [
    "identify>=2.6.19",
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.7",
    "matplotlib>=3.10.9",
    "mypy>=1.20.1",
    "nbstripout>=0.9.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/neurostream"]
